src/test/ui/consts/dangling-alloc-id-ice-2.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/dangling-alloc-id-ice-2.rs:5:1
   |
LL | / static MAP: Slice = Slice(&[
LL | |     b"CloseEvent" as &'static [u8],
LL | | ]);
   | |___^ type validation failed: encountered dangling pointer in final constant

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
